# PixieAI-API

./: Readme.md  agent.py  main.py  pyproject.toml  requirements.txt  vercel.json
agents/pixie_agent/: __init__.py  agent.py
plugins/: db.py  vector_db.py
